fix: fix build error and runtime error
ChatApp sucessfully build and run and handle the user option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ file(GLOB_RECURSE SOURCES
     ${PROJECT_SOURCE_DIR}/views/*.cpp
     ${PROJECT_SOURCE_DIR}/controller/*.cpp
     ${PROJECT_SOURCE_DIR}/services/*.cpp
+    ${PROJECT_SOURCE_DIR}/ui/*.cpp
     ${PROJECT_SOURCE_DIR}/utils/*.cpp
     ${PROJECT_SOURCE_DIR}/main.cpp
 )
